<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.create.CategoryAdminFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_category_admin_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imgCategory"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        tools:src="@tools:sample/avatars" />

    <Button
        android:id="@+id/btnLoadImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/fragment_category_admin_options"
        app:cornerRadius="20dp"
        android:backgroundTint="@color/main"
        app:layout_constraintEnd_toEndOf="@+id/imgCategory"
        app:layout_constraintStart_toStartOf="@+id/imgCategory"
        app:layout_constraintTop_toBottomOf="@+id/imgCategory"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cornerRadius="20dp"
        app:strokeWidth="1dp"
        android:backgroundTint="@color/main"
        android:text="@string/fragment_category_admin_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnLoadImage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btnLoadImage" />

</androidx.constraintlayout.widget.ConstraintLayout>